# reconaudit_ae

./: .env.example  .gitignore  DECISIONS.md  Makefile  README.md  pyproject.toml  report.py
audit/: agent.py  loop.py
data/: client_events.json  server_logs.json
notes/: executive_memo.md  loop_memo.md  observations.md  report.html  viz.html
pipeline/: run.py  sources.py
tests/: conftest.py  scenarios.md  test_audit_loop.py  test_pipeline.py
transform/: .user.yml  dbt_project.yml  profiles.yml
transform/models/marts/: dim_dates.sql  dim_products.sql  dim_users.sql  fct_reconciliation.sql  fct_revenue_summary.sql  fct_user_journey.sql  schema.yml
transform/models/staging/: schema.yml  sources.yml  stg_client_events.sql  stg_server_logs.sql
transform/seeds/: dim_event_types.csv  dim_traffic_sources.csv  schema.yml
transform/tests/: assert_ext_ids_resolve.sql  assert_no_amount_drift.sql  assert_no_causality_violation.sql
